	- Fix: the m68k architecture is identified by __mc68000__
	  rather than by __m68k__.

attr-2.0.11 (04 September 2002)
	- Make the test/run script return a proper status code.
	- Fix up the error message returned for ENODATA rather
	  than ENOATTR, so if ENOATR is assigned a separate number
	  we don't mess with ENOATTR's text message.

attr-2.0.10 (28 August 2002)
	- Add system call numbers for the m68k architecture
	- Add missing "enabling" #define for the Alpha architecture
	- Build updates to allow rpmbuild to build rpms (newer versions
	  of rpm require this, as rpm itself can no longer build rpms)
	- Several section 3 man page corrections (minor)

attr-2.0.9 (04 July 2002)
	- Build infrastructure updates so that configure options can be
	  used to specify paths rather than semi-hard-coded path names
	  controlled by the PREFIX/ROOT_PREFIX environment variables; eg.
	  now allows /lib64 and /lib32
	- Add system call numbers for the Alpha architecture

attr-2.0.8 (22 April 2002)
	- Minor wording change in the attr(5) manual page
	- Additional test cases for malformed attribute names
	- Remove leftover build targets html and ps

attr-2.0.7 (13 April 2002)
	- Minor build system updates

attr-2.0.6 (26 March 2002)
	- Add MIPS/MIPS64 system call numbers
	- Several man page updates

attr-2.0.5 (12 March 2002)
	- Fix build for architectures which don't have syscalls yet
	- Fix the syscall number used on Sparc for fremovexattr(2)
	- Test script updates
	- Man page updates

attr-2.0.4 (05 March 2002)
	- A minor change to the test/run script

attr-2.0.3 (01 March 2002)
	- add in ARM architecture system call numbers
	- updates to the test output from Andreas

attr-2.0.2 (27 February 2002)
	- add in S/390 system call numbers from Martin Schwidefsky
	- revert IA64 syscall numbering after further mail with
	  David Mosberger (apparently sys_tkill will be moved)
	  See:	https://external-lists.valinux.com/archives/\
			/linux-ia64/2002-February/002990.html
