@@ -76,10 +76,10 @@ The file permissions of symbolic links are not used in access
 checks. These differences would allow users to consume filesystem resources in
 a way not controllable by disk quotas for group or world writable special files and directories.
 .PP
-For this reason, extended user attributes
-are disallowed for special files, and access to extended user
-attributes is restricted to the owner or users with appropriate
-capabilities for directories with the sticky bit set (see the
+For this reason, extended user attributes are disallowed for symbolic links and
+special files, and access to extended user attributes is restricted to the
+owner and to users with appropriate capabilities for directories with the
+sticky bit set (see the
 .BR chmod (1)
 manual page for an explanation of Sticky Directories).
 .SS Extended system attributes
